update tests, resolve sonar issues